divide user  authentication and content management app separately
