# content_management_portal/api_specs/api_spec.json
@@ -32,40 +32,6 @@
         }
     },
     "definitions": {
-        "UserLoginRequestBody": {
-            "type": "object",
-            "properties": {
-                "username": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            },
-            "required": [
-                "username", "password"
-            ]
-        },
-        "UserLoginResponseBody": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "refresh_token": {
-                    "type": "string"
-                },
-                "expires_in": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            },
-            "required": ["access_token", "refresh_token",
-                "expires_in", "user_id"
-            ]
-        },
         "StatementRequestBody": {
             "type": "object",
             "properties": {
@@ -683,15 +649,6 @@
         }
     },
     "parameters": {
-        "UserParametarize": {
-            "name": "UserCredentials",
-            "in": "body",
-            "description": "User to register",
-            "schema": {
-                "$ref": "#/definitions/UserLoginRequestBody"
-            },
-            "required": true
-        },
         "QuestionParametarize": {
             "name": "question_id",
             "in": "path",
@@ -808,15 +765,6 @@
         }
     },
     "responses": {
-        "InvalidLoginResponse": {
-            "description": "Unauthorised"
-        },
-        "AccessTokenResponse": {
-            "description": "Succesful",
-            "schema": {
-                "$ref": "#/definitions/UserLoginResponseBody"
-            }
-        },
         "QuestionCompleteBody": {
             "description": "Successful",
             "schema": {
@@ -825,24 +773,6 @@
         }
     },
     "paths": {
-        "/login/v1/": {
-            "post": {
-                "operationId": "login_user",
-                "summary": "Create user",
-                "description": "Create user in database",
-                "parameters": [{
-                    "$ref": "#/parameters/UserParametarize"
-                }],
-                "responses": {
-                    "200": {
-                        "$ref": "#/responses/AccessTokenResponse"
-                    },
-                    "401": {
-                        "$ref": "#/responses/InvalidLoginResponse"
-                    }
-                }
-            }
-        },
         "/coding_questions/statement/v1/": {
             "post": {
                 "operationId": "create_question",
