# user_app/interactors/storages/dtos.py
@@ -1,0 +1,8 @@
+
+from dataclasses import dataclass
+
+
+@dataclass()
+class UserDto:
+    user_id: int
+    username: str
